--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.27.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "BROWSER=none react-scripts test",
+    "eject": "react-scripts eject",
+    "serve": "npm run build && npx serve -s build -l 3000",
+    "start-build": "npx serve -s build -l 3000"
   },
   "eslintConfig": {
     "extends": [
